examples/test/testpolicy1628.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1628
  namespace: namespace269
spec:
  podSelector:
    matchLabels:
      key10: value13
      key47: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value33
          key43: value33
          key17: value1
      podSelector:
        matchLabels:
          key22: value35
          key12: value44
          key8: value9
